# bincode-fails

./: 1206335.json.xz  Cargo.toml
src/: main.rs
